Closed Bug 1800897 Opened 3 years ago Closed 3 years ago

Embedded Google Calendar vanishes on printing

Categories

(Core :: Printing: Output, defect)

Firefox 105
Desktop
Unspecified
defect

Tracking

()

RESOLVED FIXED
118 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- fixed
firefox107 --- wontfix
firefox108 --- wontfix
firefox109 --- wontfix
firefox110 --- wontfix
firefox111 --- wontfix
firefox116 --- wontfix
firefox117 --- fixed
firefox118 --- verified

People

(Reporter: skyschub, Assigned: emilio)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

STR:

  1. Open https://mmec.ca/public-calendar/
  2. Open the print preview
  3. Notice that the embedded calendars are shown in the preview.
  4. Either print, or "save to PDF".

Expected:

  • The embedded calendars should be printed/saved as shown in the preview

Actual:

  • The embedded calendars vanish as soon as you click the "print" or "save" button, and the resulting document is mostly empty.

:emilio, since you are the author of the regressor, bug 774398, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)
Hardware: Unspecified → Desktop
Version: unspecified → Firefox 105

Huh, so this one I'm rather baffled about. I have been looking at it for a few hours and I haven't been able to find the culprit, but I'm closer. There are two sibling remote iframes and, on a good build, the browsing context tree for the children makes sense, while on a bad one the first iframe seems detached from the point of view of the parent process...

So we go paint, and don't find all the dependencies and bail. I still don't get what is going on and the root cause of the behavior difference, I suspect it's just a race condition since it's harder to repro under rr...

Severity: -- → S2
See Also: → 1806913

Emilio, any progress on this bug? Thanks

Flags: needinfo?(emilio)

while investigating on this bug https://bugzilla.mozilla.org/show_bug.cgi?id=1811765 we were pushed onto this bug.

mozregression results for this machine, windows 10 x64

good

> app_name: firefox
> build_date: 2022-07-11
> build_file: C:\Temp\mozregression\persist\2022-07-11--mozilla-central--firefox-104.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/07/2022-07-11-21-56-41-mozilla-central/firefox-104.0a1.en-US.win64.zip
> changeset: e0683c733cf9569c6fde4f57852efbb2befc8740
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e0683c733cf9569c6fde4f57852efbb2befc8740&tochange=9816094259f4a61b95b8c0ee75bde3eb9a33f70e
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-01
> build_file: C:\Temp\mozregression\persist\2022-08-01--mozilla-central--firefox-105.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/08/2022-08-01-21-51-29-mozilla-central/firefox-105.0a1.en-US.win64.zip
> changeset: cfd741e376c8b1044961dc605fb594edc28e798c
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cfd741e376c8b1044961dc605fb594edc28e798c&tochange=9816094259f4a61b95b8c0ee75bde3eb9a33f70e
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-12
> build_file: C:\Temp\mozregression\persist\2022-08-12--mozilla-central--firefox-105.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/08/2022-08-12-21-42-15-mozilla-central/firefox-105.0a1.en-US.win64.zip
> changeset: fbae7216fa061be5b7521010f78bb51dade2a5a9
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fbae7216fa061be5b7521010f78bb51dade2a5a9&tochange=9816094259f4a61b95b8c0ee75bde3eb9a33f70e
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-13 10:54:24.863000
> build_file: C:\Temp\mozregression\persist\cbd753d18619-shippable--mozilla-central--target.zip
> build_type: integration
> build_url: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/RMVIav8GQqadm1mbe2N1Hw/runs/0/artifacts/public%2Fbuild%2Ftarget.zip
> changeset: cbd753d186199d816e1d097631573f601932b96e
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cbd753d186199d816e1d097631573f601932b96e&tochange=f3931b6a6402efd35cf9e511e47d7d5a2203bdc9
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central
> task_id: RMVIav8GQqadm1mbe2N1Hw


> app_name: firefox
> build_date: 2022-08-13 12:55:06.391000
> build_file: C:\Temp\mozregression\persist\158b3d5240b5-shippable--autoland--target.zip
> build_type: integration
> build_url: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/D5KdnOrxTRa4vhYv6Tt4oA/runs/0/artifacts/public%2Fbuild%2Ftarget.zip
> changeset: 158b3d5240b5d37c7d6fe3075c105965a548de10
> pushlog_url: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=158b3d5240b5d37c7d6fe3075c105965a548de10&tochange=0a9857ae8dcd7528f7d8eb6e497fc193f74511fb
> repo_name: autoland
> repo_url: https://hg.mozilla.org/integration/autoland
> task_id: D5KdnOrxTRa4vhYv6Tt4oA

bad

> app_name: firefox
> build_date: 2022-08-17
> build_file: C:\Temp\mozregression\persist\2022-08-17--mozilla-central--firefox-105.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/08/2022-08-17-19-05-33-mozilla-central/firefox-105.0a1.en-US.win64.zip
> changeset: d9460ced3766bdcebc09b63d65ce1a20dba5dd7f
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fbae7216fa061be5b7521010f78bb51dade2a5a9&tochange=d9460ced3766bdcebc09b63d65ce1a20dba5dd7f
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-15
> build_file: C:\Temp\mozregression\persist\2022-08-15--mozilla-central--firefox-105.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/08/2022-08-15-21-47-39-mozilla-central/firefox-105.0a1.en-US.win64.zip
> changeset: 1c3c5be93f5897f3265ec5eeef08c09cb09fb774
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fbae7216fa061be5b7521010f78bb51dade2a5a9&tochange=1c3c5be93f5897f3265ec5eeef08c09cb09fb774
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-14
> build_file: C:\Temp\mozregression\persist\2022-08-14--mozilla-central--firefox-105.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/08/2022-08-14-21-57-43-mozilla-central/firefox-105.0a1.en-US.win64.zip
> changeset: 64a12fec281cc84ee92965053ddc5ea71f199c0b
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fbae7216fa061be5b7521010f78bb51dade2a5a9&tochange=64a12fec281cc84ee92965053ddc5ea71f199c0b
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-13
> build_file: C:\Temp\mozregression\persist\2022-08-13--mozilla-central--firefox-105.0a1.en-US.win64.zip
> build_type: nightly
> build_url: https://archive.mozilla.org/pub/firefox/nightly/2022/08/2022-08-13-21-40-44-mozilla-central/firefox-105.0a1.en-US.win64.zip
> changeset: f3931b6a6402efd35cf9e511e47d7d5a2203bdc9
> pushlog_url: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fbae7216fa061be5b7521010f78bb51dade2a5a9&tochange=f3931b6a6402efd35cf9e511e47d7d5a2203bdc9
> repo_name: mozilla-central
> repo_url: https://hg.mozilla.org/mozilla-central


> app_name: firefox
> build_date: 2022-08-20 09:58:58.075000
> build_file: C:\Temp\mozregression\persist\0a9857ae8dcd-shippable--autoland--target.zip
> build_type: integration
> build_url: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Qoi0MvrwQJaDJyXY0mpGtg/runs/0/artifacts/public%2Fbuild%2Ftarget.zip
> changeset: 0a9857ae8dcd7528f7d8eb6e497fc193f74511fb
> pushlog_url: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=96aa0ea143651d0590b9d504d34a97b1dda69063&tochange=0a9857ae8dcd7528f7d8eb6e497fc193f74511fb
> repo_name: autoland
> repo_url: https://hg.mozilla.org/integration/autoland
> task_id: Qoi0MvrwQJaDJyXY0mpGtg


> app_name: firefox
> build_date: 2022-08-20 09:58:11.288000
> build_file: C:\Temp\mozregression\persist\f19e7a4f7f67-shippable--autoland--target.zip
> build_type: integration
> build_url: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/As1bzK-CTMyEJeyDp1jBxQ/runs/0/artifacts/public%2Fbuild%2Ftarget.zip
> changeset: f19e7a4f7f67d3137a6ac5bab97861b194950826
> pushlog_url: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=158b3d5240b5d37c7d6fe3075c105965a548de10&tochange=f19e7a4f7f67d3137a6ac5bab97861b194950826
> repo_name: autoland
> repo_url: https://hg.mozilla.org/integration/autoland
> task_id: As1bzK-CTMyEJeyDp1jBxQ

from the list i would say something between (from above)
build_date: 2022-08-13 12:55:06.391000 (good)
and
build_date: 2022-08-13 (bad)

In the latest nightly build (Build ID: 20230223094032), the embedded calendars still vanish as soon as you click the "print" or "save" button, but the resulting document has calendar content.

Bug 1794265 has fixed the resulting PDF file.
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=59e3b94106e72692601180305317679290f3a963&tochange=d7103c5e7e0ca1c0b9d3e3194044040ba8e1f906

Assignee: nobody → emilio
See Also: → 1830163

This partially backs out bug 774398.

This code was added to match what Chromium was doing, but it seems (per
discussions with Chromium engineers) that:

  • Resize event listener in Chromium never changed
    innerWidth/innerHeight. That doesn't match my recollection from bug
    774398, but it's true now in Chrome stable, at least.

  • Chromium canary no longer fires a resize event
    (https://crbug.com/1076867).

So let's get rid of this, which also causes some correctness issues with
some iframes, and keep just the media query listeners firing.

Flags: needinfo?(emilio)
Blocks: 1830163
See Also: 1830163
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7a40ab5eed4c Don't fire resize events along before/afterprint. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/41354 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch
Upstream PR merged by moz-wptsync-bot
Duplicate of this bug: 1847751
Duplicate of this bug: 1830163

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox117 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Comment on attachment 9347344 [details]
Bug 1800897 - Don't fire resize events along before/afterprint. r=dholbert,jfkthame

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0 and dupes
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Removing a hacky code-path.
  • String changes made/needed: none
  • Is Android affected?: Yes
Flags: needinfo?(emilio)
Attachment #9347344 - Flags: approval-mozilla-beta?

Comment on attachment 9347344 [details]
Bug 1800897 - Don't fire resize events along before/afterprint. r=dholbert,jfkthame

Approved for 117.0b8 and 115.2esr.

Attachment #9347344 - Flags: approval-mozilla-esr115+
Attachment #9347344 - Flags: approval-mozilla-beta?
Attachment #9347344 - Flags: approval-mozilla-beta+
QA Whiteboard: [qa-triaged]
Flags: qe-verify+

Hi, Emilio! I've reproduced this issue with an affected Nightly build (2022-11-06), on macOS 11.

Unfortunately, I am still seeing the issue reproducing on latest Beta 117.0b9 and Esr 115.2, the print output is almost empty when trying to print the document from https://mmec.ca/public-calendar/. Strangely enough, I'm not able to reproduce the problem on all the tested machines. MacOS 11, Win 11 x64 seems to be affected, but not macOS 13.

The issue is not reproducible on latest Nightly 118.0a1, macOS 11 and Win 11 x64.

This is a screencast taken from latest Beta 117 on macOS 11, where the printing functionally dos not work - https://drive.google.com/file/d/1cjmE5K_ekDhWsrRVhEnUrbhN9aXVp-qh/view?usp=sharing

The second issue I see is a glitch when clicking rapidly on the "Print backgrounds" checkbox from print preview, here is a screencast showing that -
https://drive.google.com/file/d/1VGjSm7ouofFMHzwers7-Vf8mRaz_Ju1K/view?usp=sharing

Are you able to reproduce these issue as well, can you please take a look?

Flags: needinfo?(emilio)

(In reply to Ciprian Georgiu, Desktop QA from comment #20)

Hi, Emilio! I've reproduced this issue with an affected Nightly build (2022-11-06), on macOS 11.

Unfortunately, I am still seeing the issue reproducing on latest Beta 117.0b9 and Esr 115.2, the print output is almost empty when trying to print the document from https://mmec.ca/public-calendar/. Strangely enough, I'm not able to reproduce the problem on all the tested machines. MacOS 11, Win 11 x64 seems to be affected, but not macOS 13.

The issue is not reproducible on latest Nightly 118.0a1, macOS 11 and Win 11 x64.

This is a screencast taken from latest Beta 117 on macOS 11, where the printing functionally dos not work - https://drive.google.com/file/d/1cjmE5K_ekDhWsrRVhEnUrbhN9aXVp-qh/view?usp=sharing

Did the patch make it into that beta? Presumably yes?

The second issue I see is a glitch when clicking rapidly on the "Print backgrounds" checkbox from print preview, here is a screencast showing that.

This is hard to fix and not new (because painting remote iframes is async by nature, the content is in a different process). So while not great, it's not a regression.

Are you able to reproduce these issue as well, can you please take a look?

I'm traveling and do not have a machine that repros the first issue handy on beta, unfortunately... Is there any setting differences between the machines where you repro on where you don't?

Presumably some other print fix on nightly also affects this, but hard to say which. I'd say let's retest when 118 is in late beta to confirm it's fixed there and there isn't any nightly-only change making this work somehow, but otherwise I wouldn't be super-concerned. Ryan, wdyt?

Flags: needinfo?(ryanvm)
Flags: needinfo?(emilio)
Flags: needinfo?(cgeorgiu)

I can't even reproduce the original problem with https://mmec.ca/public-calendar/ in 116.0.3 even when printing to a real printer. The calendars print out on the page as expected. If this patch isn't making things any worse, then I guess let's run with it for now. Maybe we can file a follow-up bug for any future investigation for better tracking.

Flags: needinfo?(ryanvm)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #21)

Did the patch make it into that beta? Presumably yes?

It seems so per the uplift made in comment 18. I've used 117.0b9 which is supposed to have the fix.

This is hard to fix and not new (because painting remote iframes is async by nature, the content is in a different process). So while not great, it's not a regression.

Got it! I'll file a separate issue for this.
Update: logged Bug 1849555.

I'm traveling and do not have a machine that repros the first issue handy on beta, unfortunately... Is there any setting differences between the machines where you repro on where you don't?

I'm not aware of any difference setting applied on the machines, we've used clean profiles when tested on Beta and Nightly. Maybe it could be the hardware difference? I can help investigate further, let me know please.

Presumably some other print fix on nightly also affects this, but hard to say which. I'd say let's retest when 118 is in late beta to confirm it's fixed there and there isn't any nightly-only change making this work somehow, but otherwise I wouldn't be super-concerned. Ryan, wdyt?

I'll keep an eye on the bug to retest this on 118 late Beta.

Marking this as verified fixed on latest Nightly 118.0a1, since it does not reproduce anymore as per comment 20.

(In reply to Ryan VanderMeulen [:RyanVM] from comment #22)

Maybe we can file a follow-up bug for any future investigation for better tracking.

I'll file one for this as well.
Update: logged Bug 1849569.

Flags: qe-verify+
Flags: needinfo?(cgeorgiu)
Blocks: 1849569
No longer blocks: 1830163
See Also: → 1811765
See Also: → 1853101
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: