Bug 1800897 - Don't fire resize events along before/afterprint. r=dholbert

This partially backs out bug 774398.

This code was added to match what Chromium was doing, but it seems (per
discussions with Chromium engineers) that:

 * Resize event listener in Chromium never changed
   innerWidth/innerHeight. That doesn't match my recollection from bug
   774398, but it's true now in Chrome stable, at least.

 * Chromium canary no longer fires a resize event
   (https://crbug.com/1076867).

 * WebKit doesn't fire resize either.

So let's get rid of this, which also causes some correctness issues with
some iframes, and keep just the media query listeners firing.

Differential Revision: https://phabricator.services.mozilla.com/D185404